--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 
-body{
-    font-family: Arial, Helvetica, sans-serif
-}
+
 .nav{
     background-color: rgb(255, 255, 255);
     height: 70px;
@@ -23,28 +21,7 @@ body{
 .logo{
     margin-right: 800px;
 }
-.about-info{
 
-    background-color: rgb(211, 211, 210);
-    height: 800px;
-    margin-top: -50px;
-}
-.about-me{
-
-    padding-top: 100px;
-    padding-left: 250px;
-    font-weight: bold;
-    font-size: 100px;
-    color:rgb(80, 79, 80);
-}
-.about-desc{
-
-    width: 40%;
-    line-height: 2;
-    font-size: 20px;
-    margin-left: 600px;
-    color:rgb(80, 79, 80);
-}
 
 footer{
 
@@ -77,7 +54,7 @@ footer a {
     width:90%;
     align-items: center;
     margin-left: 65px;
-    height: 500px;
+    height: 600px;
 
 }
 .Bio-text{
@@ -90,10 +67,58 @@ footer a {
 }
 .Bio-img{
     margin-left: auto;
+    border-radius: 50%; 
+}
+.Bio-img img {
+    border-radius: 50%; 
 }
 
+.about{
+    margin-top: 50px;
 
+}
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+}
+header {
+    background-color: rgb(240, 202, 233);
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+main {
+    padding: 20px;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+th {
+    background-color: rgb(51, 51, 51);
+    color: #fff;
+}
+h1 {
+    margin-top: 0;
+}
+h2 {
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+p {
+    margin-top: 0;
+    margin-bottom: 10px;
+    line-height: 3px;
+}
 
 .image-baner{
     background-image:
@@ -147,3 +172,105 @@ input[type=submit]:hover {
     padding: 20px;
     width: 80%;
     }
+
+    iframe{
+        margin-left: -50px;
+    }
+    img{
+        margin-left: -30px;
+    }
+
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+    .about{
+        margin-top: 100px;
+
+    }
+    .nav {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .nav li {
+        display: block;
+        margin: 10px 0;
+    }
+
+    .logo {
+        margin: 10px 0;
+    }
+
+    footer{
+        flex-direction: column;
+        align-items: center;
+    }
+    .column{
+        flex:50%;
+        
+        
+    }
+
+
+    .Bio {
+        flex-direction: column;
+        align-items: center;
+        margin-left: 20px;
+        height: 700px;
+    }
+
+    .Bio-text, .Bio-img {
+        width: 100%;
+        margin: 10px 0;
+    }
+
+    .image-banner {
+        height: 200px;
+    }
+}
+
+/* Additional media queries for smaller screen sizes */
+@media screen and (max-width: 480px) {
+    .about{
+        margin-top: 100px;
+        
+    }
+    .nav {
+        font-size: 14px;
+    }
+
+    .nav li {
+        margin: 5px 0;
+    }
+
+    .logo {
+        margin: 5px 0;
+    }
+
+    
+    footer{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer p {
+        font-size: 12px;
+    }
+
+    .Bio {
+        height: auto;
+        margin-left: 10px;
+        height: 700px;
+    }
+
+    .Bio-text {
+        width: 50%;
+        font-size: 14px;
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    .Bio-img {
+        width: 90%;
+        margin: 10px 0;
+    }
+}
