--- a/styles.css
+++ b/styles.css
@@ -90,35 +90,6 @@ header {
     padding: 10px;
     text-align: center;
 }
-main {
-    padding: 20px;
-}
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
-}
-th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-}
-th {
-    background-color: rgb(51, 51, 51);
-    color: #fff;
-}
-h1 {
-    margin-top: 0;
-}
-h2 {
-    margin-top: 5px;
-    margin-bottom: 20px;
-}
-p {
-    margin-top: 0;
-    margin-bottom: 10px;
-    line-height: 3px;
-}
 
 .image-baner{
     background-image:
@@ -180,6 +151,42 @@ input[type=submit]:hover {
         margin-left: -30px;
     }
 
+.title {
+    
+    font-size: 20px;
+    font-weight: bold;
+
+}
+#projects{
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+
+}
+#projectList{
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+
+}
+.project-item{
+    height: 400px;
+    width: 350px;
+    text-align:center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    border-radius:20px;
+    box-shadow: -1px 4px 18px 4px rgba(227, 186, 253, 0.49);
+    -webkit-box-shadow: -1px 4px 18px 4px rgba(227, 190, 250, 0.49);
+    -moz-box-shadow: -1px 4px 18px 4px rgba(232, 198, 253, 0.49);
+
+}
+
+
+
 /* Responsive styles */
 @media screen and (max-width: 768px) {
     .about{
@@ -225,6 +232,16 @@ input[type=submit]:hover {
 
     .image-banner {
         height: 200px;
+    }
+    #projectList{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 95%;
+    }
+    .project-item{
+        margin: 10px;
     }
 }
 
@@ -272,5 +289,16 @@ input[type=submit]:hover {
     .Bio-img {
         width: 90%;
         margin: 10px 0;
+    }
+    #projectList{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        width: 95%;
+    
+    }
+    .project-item{
+        margin: 10px;
     }
 }
